--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ for Your Business"
   </head>
   <body>
     <header class="text">
-      <a class="header-logo" href="./index.html">WEBSTUDIO</a>
+      <a class="header-logo" current href="./index.html">WEBSTUDIO</a>
       <nav> 
         <ul class="header-nav">
           <li><a current href="#">Studio</a></li>
