--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ for Your Business"
   </head>
   <body>
     <header class="text">
-      <a class="header-logo" current href="./index.html">WEBSTUDIO</a>
+      <a class="header-logo" current href="#">WEBSTUDIO</a>
       <nav> 
         <ul class="header-nav">
           <li><a current href="#">Studio</a></li>
-          <li> <a current href="#">Portfolio</a></li>
-          <li> <a current href="#">Contacts</li>
+          <li><a current href="#">Portfolio</a></li>
+          <li><a current href="#">Contacts</li>
         </ul>
         <ul>
             <li>
