--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@ problem to walk away with the perfect and creative solution. </p>
        <h2>Our Team</h2>
        <ul class="team-list">
         <li class="team-item">
-          <img src="./img/mark.jpg" alt="Photo of Mark Guerrero">
+          <img src="./img/mark.jpg" alt="Photo of Mark Guerrero" width="264">
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
         <li class="team-item">
-          <img src="./img/tom.jpg" alt="Photo of Tom Ford">
+          <img src="./img/tom.jpg" alt="Photo of Tom Ford" width="264">
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li class="team-item">
-          <img src="./img/camila.jpg" alt="Photo of Camila Garcia">
+          <img src="./img/camila.jpg" alt="Photo of Camila Garcia" width="264">
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li class="team-item">
-          <img src="./img/daniel.jpg" alt="Photo of Daniel Wilson">
+          <img src="./img/daniel.jpg" alt="Photo of Daniel Wilson" width="264">
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
