--- a/index.html
+++ b/index.html
@@ -13,19 +13,17 @@ for Your Business"
   </head>
   <body>
     <header class="text">
-      <a class="header-logo" current href="#">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <nav> 
-        <ul class="header-nav">
-          <li><a current href="#">Studio</a></li>
-          <li><a current href="#">Portfolio</a></li>
-          <li><a current href="#">Contacts</li>
-        </ul>
+
         <ul>
-            <li>
-          <a href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
+        </ul>
+
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
         </ul>
       </nav>
