--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ problem to walk away with the perfect and creative solution. </p>
     <footer class="text">
       <p class="logo">WEBSTUDIO</p>
       <p>Increase the flow of customers and </br>
-       sales for your business with digital<br>
+       sales for your business with digital </br>
        marketing & growth solutions.</p>
     </footer>
   </body>
