--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 for Your Business"
     />
     <title>WEBSTUDIO</title>
-        <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="text">
       <a href="./index.html">WEBSTUDIO</a>
-      <nav> 
-
+      <nav>
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -30,63 +29,87 @@ for Your Business"
     </header>
     <main>
       <section class="text">
-        <h1>Effective Solutions
-for Your Business</h1>
-<button type="button">Order Service</button>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <section class="text">
         <h2 hidden>Our Benefits</h2>
         <ul class="benefits-list">
           <li class="benefits-item">
             <h3>Strategy</h3>
-            <p class="benefit-text">Our goal is to identify the business
-problem to walk away with the perfect and creative solution. </p>
+            <p class="benefit-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
           </li>
           <li class="benefits-item">
             <h3>Punctuality</h3>
-            <p class="benefit-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <p class="benefit-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
           </li>
           <li class="benefits-item">
             <h3>Diligence</h3>
-            <p class="benefit-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <p class="benefit-text">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
           </li>
           <li class="benefits-item">
             <h3>Technologies</h3>
-            <p class="benefit-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            <p class="benefit-text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
           </li>
         </ul>
       </section>
       <section class="text">
-       <h2>Our Team</h2>
-       <ul class="team-list">
-        <li class="team-item">
-          <img src="./img/mark.jpg" alt="Photo of Mark Guerrero" width="264">
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </li>
-        <li class="team-item">
-          <img src="./img/tom.jpg" alt="Photo of Tom Ford" width="264">
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </li>
-        <li class="team-item">
-          <img src="./img/camila.jpg" alt="Photo of Camila Garcia" width="264">
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </li>
-        <li class="team-item">
-          <img src="./img/daniel.jpg" alt="Photo of Daniel Wilson" width="264">
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </li>
-       </ul>
+        <h2>Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
+            <img
+              src="./img/mark.jpg"
+              alt="Photo of Mark Guerrero"
+              width="264"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li class="team-item">
+            <img src="./img/tom.jpg" alt="Photo of Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li class="team-item">
+            <img
+              src="./img/camila.jpg"
+              alt="Photo of Camila Garcia"
+              width="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li class="team-item">
+            <img
+              src="./img/daniel.jpg"
+              alt="Photo of Daniel Wilson"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="text">
       <p class="logo">WEBSTUDIO</p>
-      <p>Increase the flow of customers and </br>
-       sales for your business with digital </br>
-       marketing & growth solutions.</p>
+      <p>
+        Increase the flow of customers and <br />
+        sales for your business with digital <br />
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
