--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@ for Your Business"
   </head>
   <body>
     <header class="text">
-      <a href="./index.html">WEBSTUDIO</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
+
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
-
+      </nav>
+      <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
-      </nav>
+      </address>
     </header>
+
     <main>
       <section class="text">
         <h1>Effective Solutions for Your Business</h1>
@@ -70,7 +73,7 @@ for Your Business"
         <ul class="team-list">
           <li class="team-item">
             <img
-              src="./img/mark.jpg"
+              src="./img/mark.jpgq"
               alt="Photo of Mark Guerrero"
               width="264"
             />
@@ -104,10 +107,9 @@ for Your Business"
       </section>
     </main>
     <footer class="text">
-      <p class="logo">WEBSTUDIO</p>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
