--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 for Your Business"
     />
     <title>WEBSTUDIO</title>
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="text">
@@ -73,15 +72,21 @@ for Your Business"
         <ul class="team-list">
           <li class="team-item">
             <img
-              src="./img/mark.jpgq"
+              src="./img/mark.jpg"
               alt="Photo of Mark Guerrero"
               width="264"
+              height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li class="team-item">
-            <img src="./img/tom.jpg" alt="Photo of Tom Ford" width="264" />
+            <img
+              src="./img/tom.jpg"
+              alt="Photo of Tom Ford"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
@@ -90,6 +95,7 @@ for Your Business"
               src="./img/camila.jpg"
               alt="Photo of Camila Garcia"
               width="264"
+              height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -99,6 +105,7 @@ for Your Business"
               src="./img/daniel.jpg"
               alt="Photo of Daniel Wilson"
               width="264"
+              height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
@@ -106,8 +113,8 @@ for Your Business"
         </ul>
       </section>
     </main>
-    <footer class="text">
-      <a href="./index.html">WEBSTUDIO</a>
+    <footer>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
