--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ for Your Business"
     <title>WEBSTUDIO</title>
   </head>
   <body>
-    <header class="text">
+    <header>
       <nav>
         <a href="./index.html">WebStudio</a>
 
@@ -30,83 +30,63 @@ for Your Business"
     </header>
 
     <main>
-      <section class="text">
+      <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-      <section class="text">
+      <section>
         <h2 hidden>Our Benefits</h2>
-        <ul class="benefits-list">
-          <li class="benefits-item">
+        <ul>
+          <li>
             <h3>Strategy</h3>
-            <p class="benefit-text">
+            <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="benefits-item">
+          <li>
             <h3>Punctuality</h3>
-            <p class="benefit-text">
+            <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="benefits-item">
+          <li>
             <h3>Diligence</h3>
-            <p class="benefit-text">
+            <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="benefits-item">
+          <li>
             <h3>Technologies</h3>
-            <p class="benefit-text">
+            <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section class="text">
+      <section>
         <h2>Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              src="./img/mark.jpg"
-              alt="Photo of Mark Guerrero"
-              width="264"
-              height="260"
-            />
+        <ul>
+          <li>
+            <img src="./img/mark.jpg" alt="photo of Mark Guerrero" width="264"/>
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li class="team-item">
-            <img
-              src="./img/tom.jpg"
-              alt="Photo of Tom Ford"
-              width="264"
-              height="260"
-            />
+          <li>
+            <img src="./img/tom.jpg" alt="Photo of Tom Ford" width="264"/>
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li class="team-item">
-            <img
-              src="./img/camila.jpg"
-              alt="Photo of Camila Garcia"
-              width="264"
-              height="260"
-            />
+          <li>
+            <img src="./img/camila.jpg" alt="Photo of Camila Garcia" width="264"/>
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li class="team-item">
-            <img
-              src="./img/daniel.jpg"
-              alt="Photo of Daniel Wilson"
-              width="264"
-              height="260"
-            />
+          <>
+            <img src="./img/daniel.jpg" alt="Photo of Daniel Wilson" width="264"/>
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
