--- a/index.html
+++ b/index.html
@@ -71,22 +71,37 @@ for Your Business"
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./img/mark.jpg" alt="photo of Mark Guerrero" width="264"/>
+            <img
+              src="./img/mark.jpg"
+              alt="photo of Mark Guerrero"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
+
           <li>
-            <img src="./img/tom.jpg" alt="Photo of Tom Ford" width="264"/>
+            <img src="./img/tom.jpg" alt="Photo of Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
+
           <li>
-            <img src="./img/camila.jpg" alt="Photo of Camila Garcia" width="264"/>
+            <img
+              src="./img/camila.jpg"
+              alt="Photo of Camila Garcia"
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <>
-            <img src="./img/daniel.jpg" alt="Photo of Daniel Wilson" width="264"/>
+
+          <li>
+            <img
+              src="./img/daniel.jpg"
+              alt="Photo of Daniel Wilson"
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
