--- a/index.html
+++ b/index.html
@@ -75,13 +75,19 @@ for Your Business"
               src="./img/mark.jpg"
               alt="photo of Mark Guerrero"
               width="264"
+              height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
-            <img src="./img/tom.jpg" alt="Photo of Tom Ford" width="264" />
+            <img
+              src="./img/tom.jpg"
+              alt="Photo of Tom Ford"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
@@ -91,6 +97,7 @@ for Your Business"
               src="./img/camila.jpg"
               alt="Photo of Camila Garcia"
               width="264"
+              height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -101,6 +108,7 @@ for Your Business"
               src="./img/daniel.jpg"
               alt="Photo of Daniel Wilson"
               width="264"
+              height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
