--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ for Your Business"
         <ul>
           <li>
             <img
-              src="./img/mark.jpg"
+              src="./images/mark.jpg"
               alt="photo of Mark Guerrero"
               width="264"
               height="260"
@@ -83,7 +83,7 @@ for Your Business"
 
           <li>
             <img
-              src="./img/tom.jpg"
+              src="./images/tom.jpg"
               alt="Photo of Tom Ford"
               width="264"
               height="260"
@@ -94,7 +94,7 @@ for Your Business"
 
           <li>
             <img
-              src="./img/camila.jpg"
+              src="./images/camila.jpg"
               alt="Photo of Camila Garcia"
               width="264"
               height="260"
@@ -105,7 +105,7 @@ for Your Business"
 
           <li>
             <img
-              src="./img/daniel.jpg"
+              src="./images/daniel.jpg"
               alt="Photo of Daniel Wilson"
               width="264"
               height="260"
